@@ -1,3 +1,8 @@
+2003-06-19  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmGtk/Makefile.am:
+	do not install FvwmGtk.1 if FvwmGtk is not built
+
 2003-06-17  Dan Espen  <dane@mk.telcordia.com>
 
 	* FvwmGtk/FvwmGtk.c (process_message): Off by one patch from
